# mathres

./: README.md  fixed_qa_pairs_result_75.json  pyproject.toml  qa_pairs_result_75.json  test.py
src/restructurer_math/: crew.py  main.py
src/restructurer_math/config/: agents.yaml  tasks.yaml
src/restructurer_math/tools/: json_validator_tool.py
