[project]
name = "restructurer_math"
version = "0.1.0"
description = "restructurer_math using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.119.0,<1.0.0",
    "flask>=2.3.0,<3.0.0",
    "flask-cors>=4.0.0,<5.0.0"
]

[project.scripts]
restructurer_math = "restructurer_math.main:run"
run_crew = "restructurer_math.main:run"
train = "restructurer_math.main:train"
replay = "restructurer_math.main:replay"
test = "restructurer_math.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
